Fix strange scrollbar postion issue

--- a/packages/frontend/src/layouts/StatusPageLayout/StatusPageLayout.scss
+++ b/packages/frontend/src/layouts/StatusPageLayout/StatusPageLayout.scss
@@ -6,4 +6,5 @@
   width: 90%;
   max-width: 850px;
   margin: 0 auto;
+  overflow: visible;
 }
